<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="@dimen/commonPadding">

    <ImageView
        android:id="@+id/bell"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_height_"
        android:layout_marginBottom="@dimen/layout_marginBottom_"
        app:srcCompat="@drawable/bell" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePhoto"
            android:layout_width="@dimen/layout_photo_size"
            android:layout_height="@dimen/layout_photo_size"
            android:layout_gravity="center"
            app:civ_border_color="@color/white"
            app:civ_border_width="@dimen/layout_border_width" />

        <TextView
            android:id="@+id/textView26668"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/layout_marginLeft_"
            android:fontFamily="@font/monda_bold"
            android:text="@string/textView_name"
            android:textColor="@color/white"
            android:textSize="@dimen/textSyze_" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_marginTop_"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            style="@style/MyTextStyleFollowers"
            android:text="@string/textView_trophies" />

        <TextView
            android:id="@+id/textView9"
            style="@style/MyTextStyleFollowers"
            android:text="@string/textView_following" />

        <TextView
            android:id="@+id/textView10"
            style="@style/MyTextStyleFollowers"
            android:text="@string/textView_followers" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/layout_paddingBottom_">

        <TextView
            android:id="@+id/textView4"
            style="@style/MyTextStyleQuantity"
            android:text="@string/textView_trophies_quantity" />

        <TextView
            android:id="@+id/textView5"
            style="@style/MyTextStyleQuantity"
            android:text="@string/textView_following_quantity" />

        <TextView
            android:id="@+id/textView6"
            style="@style/MyTextStyleQuantity"
            android:text="@string/textView_followers_quantity" />
    </LinearLayout>

    <View
        android:id="@+id/textView676"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_line_height"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                style="@style/MyTextStyleFieldNames"
                android:text="@string/textView_name_field" />

            <TextView
                android:id="@+id/textView12"
                style="@style/MyTextStyleFieldNames"
                android:text="@string/textView_country_field" />

            <TextView
                android:id="@+id/textView13"
                style="@style/MyTextStyleFieldNames"
                android:text="@string/textView_postal_code_field" />

            <TextView
                android:id="@+id/textView14"
                style="@style/MyTextStyleFieldNames"
                android:text="@string/textView_date_of_birth_field" />

            <TextView
                android:id="@+id/textView15"
                style="@style/MyTextStyleFieldNames"
                android:text="@string/textView_gender_field" />

            <TextView
                android:id="@+id/textView16"
                style="@style/MyTextStyleFieldNames"
                android:text="@string/textView_height_field" />

            <TextView
                android:id="@+id/textView11"
                style="@style/MyTextStyleFieldNames"
                android:baselineAligned="false"
                android:text="@string/textView_phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:textColor="@color/white">

            <TextView
                android:id="@+id/textView17"
                style="@style/MyTextStyleFieldInfo"
                android:text="@string/textView_name_field_quantity" />

            <TextView
                android:id="@+id/textView112"
                style="@style/MyTextStyleFieldInfo"
                android:text="@string/textView_country_field_quantity" />

            <TextView
                android:id="@+id/textView113"
                style="@style/MyTextStyleFieldInfo"
                android:text="@string/textView_postal_code_field_quantity" />

            <TextView
                android:id="@+id/textView114"
                style="@style/MyTextStyleFieldInfo"
                android:text="@string/textView_date_of_birth_field_quantity" />

            <TextView
                android:id="@+id/textView115"
                style="@style/MyTextStyleFieldInfo"
                android:text="@string/textView_gender_field_quantity" />

            <TextView
                android:id="@+id/textView116"
                style="@style/MyTextStyleFieldInfo"
                android:text="@string/textView_height_field_quantity" />

            <TextView
                android:id="@+id/textView1111"
                style="@style/MyTextStyleFieldInfo"
                android:text="@string/textView_phone_quantity" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>