<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/layout_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/layout_marginTop"
            app:srcCompat="@drawable/login_logo" />

        <View
            android:id="@+id/separator1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_big_height" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:background="@drawable/gray_background"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_small_logo"
                android:layout_marginBottom="@dimen/layout_margin_small_logo"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_login_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:fontFamily="@font/monda_regular"
                android:text="@string/textView_user"
                android:textColor="@color/white"
                android:textSize="@dimen/textSyze" />
        </LinearLayout>

        <View
            android:id="@+id/separator2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:background="@drawable/gray_background"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/password_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_small_logo"
                android:layout_marginBottom="@dimen/layout_margin_small_logo"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_login_password" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:fontFamily="@font/monda_regular"
                android:text="@string/textView_password"
                android:textColor="@color/white"
                android:textSize="@dimen/textSyze" />
        </LinearLayout>

        <View
            android:id="@+id/separator3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_big_height" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/log_in"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:background="@color/water_color"
            android:fontFamily="@font/monda_bold"
            android:gravity="center"
            android:text="@string/button_log_in"
            android:textColor="@color/white"
            android:textSize="@dimen/textSyze" />

        <View
            android:id="@+id/separator4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/monda_regular"
            android:gravity="center"
            android:text="@string/textView_message_forgot"
            android:textColor="@color/white"
            android:textSize="@dimen/textForgotSize" />

        <View
            android:id="@+id/separator5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height" />

        <View
            android:id="@+id/separator6"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:background="@color/tan_color"
            android:fontFamily="@font/monda_bold"
            android:gravity="center"
            android:text="@string/button_create_account"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/layout_marginBottom"
            android:textSize="@dimen/textSyze" />
            </LinearLayout>

</LinearLayout>